# EdinRendering

./: BVH.cpp  BVH.h  BVHStressTest  CMakeLists.txt  JSONReader.cpp  JSONReader.h  README.md  blenderExporter  blenderExporterV2.py  blenderReadinJson  bounds3.h  camera.h  color.h  cube.h  geometry.h  hittable.h  hittable_list.h  interval.h  lighting.h  main.cpp  mat3.h  material.h  model.cpp  model.h  plane.h  pointLight.h  ray.h  rays.txt  scene.h  scene_export.json  sphere.h  texture.h  triangle.h  untitled.blend1  utility.h  vec3.h
.VSCodeCounter/2025-10-21_22-42-52/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
scene_export2/: scene_export.json
